--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "enolo-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "author": "enolo team",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
     "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": "17.8.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.0"
   }
 }
