--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "enolo team",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mongoose": "^6.3.1",
     "nodemon": "^2.0.15"
   }
 }
