--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_URL="mongodb+srv://enolo_team:EsameIngegneria.@enolocluster.i99nk.mongodb.net/EnoloDB?retryWrites=true&w=majority"
+DB_URL=mongodb+srv://enolo_team:EsameIngegneria.@enolocluster.i99nk.mongodb.net/EnoloDB?retryWrites=true&w=majority
 PORT=3000
