--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "enolo team",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.0",
+    "body-parser": "^1.20.0",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "mongoose": "^6.3.1",
     "nodemon": "^2.0.15"
   },
