--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "enolo team",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "mongoose": "^6.3.1",
+    "nodemailer": "^6.7.4",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
