--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "querystring": "^0.2.1",
+    "url": "^0.11.0"
   },
   "engines": {
     "node": "17.8.0"
