--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_URL=mongodb+srv://enolo_team:EsameIngegneria.@enolocluster.i99nk.mongodb.net/EnoloDB?retryWrites=true&w=majority
+DB_URL=URL
 PORT=3000
 TOKEN_KEY = NULL
 REFRESH_TOKEN_KEY = NULL
